autumn/tests/compile-fail/non_function.stderr
error: route macros can only be applied to functions
 --> tests/compile-fail/non_function.rs:4:1
  |
4 | struct Hello;
  | ^^^^^^^^^^^^^
